# codex_geoflows

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  index.html  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_now_flow_columns.py  0003_add_severity_index.py  0004_add_reach_grid_crosswalk.py  0005_expand_glofas_crosswalk_diagnostics.py
app/: cli.py  main.py
app/api/: deps.py  router.py
app/api/routes/: forecast.py
app/core/: config.py  database.py  logging.py
app/db/: models.py  repositories.py  session.py
app/forecast/: artifacts.py  base.py  cache.py  classify.py  exceptions.py  schemas.py  service.py
app/forecast/jobs/: discover_latest_run.py  ingest_forecast_run.py  ingest_return_periods.py  (+2 more)
docs/: flood-classification-system.md  frontend-optimization-plan.md  frontend-optimization-status.md  glofas-implementation-plan.md  performance-phase0-baseline.md  rivers-pmtiles-rebuild.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: hydrology.js
frontend/src/: main.js  style.css
scripts/: build_rivers_pmtiles.sh  check_river_zoom_filters.py  run_phase0_baseline.py
tests/: conftest.py  test_api_forecast.py  test_classify.py  test_cli_ingest_forecast_run.py  test_cli_return_periods_zarr_open.py  test_forecast_artifacts_parquet.py  test_forecast_service.py  test_geoglows_forecast_zarr.py  test_geoglows_provider.py  test_geoglows_return_periods_loader.py  test_glofas_return_period_guardrails.py  test_service_safety_controls.py
(+7 files in other folders)
