[project]
name = "geoflows-forecast-service"
version = "0.1.0"
description = "Provider-agnostic forecast ingestion service with GEOGLOWS adapter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
  "geoglows>=1.8.1",
  "pandas>=2.2.2",
  "xarray>=2024.6.0",
  "zarr>=2.18.2",
  "s3fs>=2024.6.0",
  "pyarrow>=17.0.0",
  "orjson>=3.10.0",
  "cdsapi>=0.7.0",
  "cfgrib>=0.9.12",
  "eccodes>=2.36.0",
  "scipy>=1.11.0",
]


[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.5.5",
]

[project.scripts]
geoflows = "app.cli:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100

